@@ -8,9 +8,9 @@ MPICH_LIB_OLD=@MPICH_LIB_OLD@
 
 # Libraries (and paths) to include before the MPI library
 if [ $MPICH_LIB_OLD -eq 1 ]; then
-    export PROFILE_PRELIB="-lfmpich `$DARSHAN_PREFIX/bin/darshan-config --pre-ld-flags`"
+    export PROFILE_PRELIB="`$DARSHAN_PREFIX/bin/darshan-config --pre-ld-flags`"
 else
-    export PROFILE_PRELIB="-lmpifort `$DARSHAN_PREFIX/bin/darshan-config --pre-ld-flags`"
+    export PROFILE_PRELIB="`$DARSHAN_PREFIX/bin/darshan-config --pre-ld-flags`"
 fi
 
 # Libraries to include after the MPI library
